welcome.lessons.welcome.methods.basics.MethodsDogHouse.scala.error
MethodsDogHouse:8: error: not found: value levelBrosse
	levelBrosse();
        ^