welcome.lessons.welcome.methods.basics.MethodsDogHouse.scala.code
def dogHouse() {
	baisseBrosse();
	for (i<-1 to 4){
		avance();
		avance();
		gauche();
	}
	levelBrosse();
}
